--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "nested-dnd-across-parent",
   "version": "0.0.237",
-  "description": null,
+  "description": "",
   "keywords": [],
-  "homepage": "https://codesandbox.io/s/vmm0nplz5y",
   "main": "index.js",
   "dependencies": {
-    "react-dom": "16.0.0",
+    "react-dom": ">=16.0.1",
     "react-beautiful-dnd": "4.0.1",
     "react": "16.0.0"
   },
